--- a/style.css
+++ b/style.css
@@ -89,11 +89,7 @@ a.folioLink:hover {cursor: ne-resize; color:black;background:white;border:none;o
 #open:hover{color:red;transition: color 0.5s ease;}
 #close:hover{color:red;transition: color 0.5s ease;}
 #open,
-#close {    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
+#close {
   cursor: pointer;
 bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 32px; color:lightcoral;
 text-decoration: underline;transition: color 0.5s ease;
