--- a/fonts/icons.css
+++ b/fonts/icons.css
@@ -1,13 +1,13 @@
 @font-face {
-font-family: 'fontello';
-src: url('fontello.eot?29996230');
-src: url('fontello.eot?29996230#iefix') format('embedded-opentype'),
-url('fontello.woff2?29996230') format('woff2'),
-url('fontello.woff?29996230') format('woff'),
-url('fontello.ttf?29996230') format('truetype'),
-url('fontello.svg?29996230#fontello') format('svg');
-font-weight: normal;
-font-style: normal;
+  font-family: 'fontello';
+  src: url('fontello.eot?21942214');
+  src: url('fontello.eot?21942214#iefix') format('embedded-opentype'),
+       url('fontello.woff2?21942214') format('woff2'),
+       url('fontello.woff?21942214') format('woff'),
+       url('fontello.ttf?21942214') format('truetype'),
+       url('fontello.svg?21942214#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -15,7 +15,7 @@ font-style: normal;
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?29996230#fontello') format('svg');
+    src: url('../font/fontello.svg?21942214#fontello') format('svg');
   }
 }
 */
@@ -55,5 +55,5 @@ font-style: normal;
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-folderclosed:before { content: '\e800'; } /* '' */
-.icon-folderopen:before { content: '\e801'; } /* '' */
+.icon-folderopen:before { content: '\e800'; } /* '' */
+.icon-folderclosed:before { content: '\e801'; } /* '' */
